Fix button spacing in links editor

--- a/root/static/styles/forms.less
+++ b/root/static/styles/forms.less
@@ -458,7 +458,7 @@ input.disc-up {
 }
 
 #external-links-editor .add-link-row {
-    padding: @form-margin / 2;
+    padding: (@form-margin / 2) 0;
     margin-right: @form-margin;
     float: right;
 }
